# badges

./: .dockerignore  .gitmodules  .rustfmt.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  build.rs  fly.toml  readme.md
assets/: main.css
src/: apis.rs  badge.rs  colors.rs  main.rs  pages.rs  server.rs  utils.rs  width.rs
src/apis/: amo.rs  clojars.rs  cocoapods.rs  codecov.rs  cpan.rs  crates.rs  cws.rs  dart_pub.rs  dartpub.rs  discord.rs  docker.rs  fixed.rs  gems.rs  github.rs  hackage.rs  hexpm.rs  homebrew.rs  jetbrains.rs  mod.rs  npm.rs  nuget.rs  packagephobia.rs  packagist.rs  puppetforge.rs  pypi.rs  readthedocs.rs  vscode.rs
src/badgelib/: _width.rs  badge.rs  color.rs  mod.rs  utils.rs
