[package]
name = "badges"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
base64 = "0.22.1"
cached = { version = "0.55.1", features = ["default", "async"] }
chrono = { version = "0.4.40", features = ["serde"] }
maud = { version = "0.27.0", features = ["axum"] }
phf = { version = "0.11.3", features = ["macros"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_variant = "0.1.3"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "normalize-path"] }
tower-layer = "0.3.3"
tracing = "0.1.41"
tracing-logfmt = "0.3.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
rayon = "1.10.0"
rusttype = "0.9.3"

[lints.rust]
dead_code = "allow"

[profile.release]
strip = true

[profile.dev]
opt-level = 1
debug = 0

[profile.dev.package."*"]
opt-level = 3
