[package]
name = "badges"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
base64 = "0.22.1"
cached = { version = "0.55.1", features = ["async"] }
chrono = { version = "0.4.40", features = ["serde"] }
maud = { version = "0.27.0", features = ["axum"] }
mime_guess = "2.0.5"
phf = { version = "0.11.3", features = ["macros"] }
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["json", "rustls-tls"], default-features = false }
rust-embed = { version = "8.6.0", features = ["axum"] }
semver = "1.0.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_variant = "0.1.3"
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["normalize-path", "trace"] }
tower-layer = "0.3.3"
tracing = "0.1.41"
tracing-logfmt = "0.3.5"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[build-dependencies]
rayon = "1.10.0"
rusttype = "0.9.3"

[lints.rust]
dead_code = "allow"
# unused_imports = "deny"

[lints.clippy]

[profile.release]
strip = true

[profile.dev]
debug = 0
strip = "debuginfo"

[profile.dev.package."*"]
opt-level = 3
